overflow fix

--- a/HTML/finalCSS.css
+++ b/HTML/finalCSS.css
@@ -1588,7 +1588,6 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         display: -webkit-box;
-        overflow: initial;
         word-break: break-all;
     }
 
